# mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  glama.json  pyproject.toml  server.json  server.template.json
.github/workflows/: ci.yml  production.yml  publish.yml  staging.yml
docs/: authentication.md  development.md  documentation-search.md  flags.md  self-hosted.md  tool-surface.md
scripts/: build_docs_index.py  render_server_json.py
src/mcp_server_appwrite/: __init__.py  __main__.py  auth.py  constants.py  context.py  docs_search.py  error_monitoring.py  flags.py  http_app.py  operator.py  server.py  service.py  telemetry.py  tool_manager.py
src/mcp_server_appwrite/assets/: __init__.py
src/mcp_server_appwrite/data/: docs_index_meta.json
tests/: test_all.py
tests/integration/: support.py  test_functions.py  test_oauth_discovery.py  test_operator.py  test_sites.py  test_storage.py
tests/unit/: test_auth.py  test_context.py  test_docs_search.py  test_error_monitoring.py  test_http_app.py  test_operator.py  test_release_metadata.py  test_server.py  test_telemetry.py
