[project]
name = "mcp-server-appwrite"
version = "0.8.4"
description = "MCP (Model Context Protocol) server for Appwrite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appwrite>=21.0.0,<22",
    "docstring-parser>=0.16",
    "mcp[cli]>=1.12.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "numpy>=2.0",
    "openai>=1.40",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
integration = [
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.1.2",
    "passlib>=1.7.4",
    "pycryptodome>=3.20.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.10.0",
    "pyright>=1.1.390",
    # Only needed by scripts/build_docs_index.py to (re)build the docs index.
    "pyyaml>=6.0",
]

[project.scripts]
mcp-server-appwrite = "mcp_server_appwrite.__main__:main"

[tool.hatch.build.targets.wheel]
# Ship the prebuilt docs search index (non-.py package data) in the wheel.
artifacts = ["src/mcp_server_appwrite/data/*"]

[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes (real bugs), I: import sorting.
# Line length (E501) is owned by black, so it is disabled here.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
